% 26 - 10 - 2023
- MEM : Merge pipeline for EEG/MEG and fNIRS
- cMEM: Include option for depth-weighting
- MEM: add progress bar
- Baseline: better select baseline when selecting external baseline
 
% 22 - 04 - 2021
- All addpath were removed
- process_inverse_mem:
    - Remove unused options
- be_main_call; be_check_timedef; panel_brainentropy:
    - Baseline file is better handled, the panel no longer preloads it but point to its full path
- panel_brainentropy; be_main:
    - Files transfered from the Brainstorm repository

% 17 - 04 - 2021
- be_gen_paths: 
    - Fix addpath, should add [./brainentropy] instead of [./brainentropy/best/misc]
- be_minimize_free_energy: 
    - Add option to use minFunc without MEX files
- panel_brainentropy: 
    - Add option to load a baseline file from the current Brainstorm protocol using a substring
    - Add option to use minFunc without MEX files
    - Remove option for loading emptyroom data

% 19 - 06 - 2019
- be_main_call: Fix opening of MATLAB parallel pool
- process_inverse_mem: Suppress warning 'eval(macro_method);'

% 25 - 07 - 2017
- launch from the 2016 SOURCE PANEL is now operational

% 08 - 09 - 2015
- cMEM EEG/MEG fusion is now operational

% 05 - 12 - 2014
- be_install 	            :   automatic update added

% 27 - 10 - 2014 	    :	Changes requested by Francois
- panel_brainentropy 	    :	remove use of caller stack
- process_inverse_mem	    : 	change position in menu liste from 325 to 328 (after the separator)
				change the process name to "Compute sources: BEst"

% 10 - 10 - 2014 	    :   New version of the packge 	
- be_pipelineoptions        :	permute DEF and OPT in the call to be_struct_copy_fields 		
- be_main		    :	be_main reserved for plugin, replaced by be_main_call
	
% 18 - 09 - 2014
- be_check_caller           :   bug correction - now brainstorm mode is set if any caller is a fcn within BrainstormHomeDir
- be_check_timedef          :   bug correction - OPTIONS.optional.minW replaced by minW