@@ -1,1 +1,1 @@
-2.7.4
+3.0.0
