@@ -27,7 +27,7 @@ function [obj, OPTIONS] = be_main_mne(obj, OPTIONS)
     
     if OPTIONS.model.depth_weigth_MNE > 0 || any(strcmp( OPTIONS.mandatory.DataTypes,'NIRS')) 
         
-        J   =   be_jmne_lcurve(G,M,OPTIONS, struct('hfig',obj.hfig, 'hfigtab',obj.hfigtab)); 
+        J   =   be_jmne_lcurve_MAP(G,M,OPTIONS, struct('hfig',obj.hfig, 'hfigtab',obj.hfigtab)); 
     else
         J   =   be_jmne(G,M,OPTIONS);
     end
