@@ -1,9 +1,0 @@
-%% BEST_v2.5 TEST LOG %%
-
-
-%       date        Machine     OS              Matlab      Java (type 'version -java')
-%   
-%       28-05       PC          ubuntu12.04     R2011a      1.6.0_17-b04
-%
-%       28-05       MAC         OS X 10.6       R2008b      1.6.0_15
-%
